Added posts to tracked files.

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 
     <meta name="author" content="Christopher Negrich">
     <meta name="description" content="Christopher Negrich&#39;s personal website">
-    <meta name="keywords" content="blog,developer,personal,resume,Christopher,Negrich">
+    <meta name="keywords" content="blog,developer,engineer,software,security,personal,resume,Chris,Christopher,Alec,Negrich">
 
     <base href="/">
     <title>Christopher Negrich</title>
