Revert "Added posts to tracked files."
This reverts commit b13b04668bdcc0a88959ebbc998cbe4b4908c10b.

--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
 
     <meta name="author" content="Christopher Negrich">
     <meta name="description" content="Christopher Negrich&#39;s personal website">
-    <meta name="keywords" content="blog,developer,engineer,software,security,personal,resume,Chris,Christopher,Alec,Negrich">
+    <meta name="keywords" content="blog,developer,personal,resume,Christopher,Negrich">
 
     <base href="/">
     <title>
@@ -96,8 +96,7 @@ Barrett Honors College at Arizona State University, Tempe, Arizona</p>
 <ul>
 <li>Working in C++, Python, SQL, and Rust to develop tools for semiconductor manufacturing</li>
 <li>Working as part of an agile development team using Github and Jira for version management</li>
-<li>Working on distributing computing applications for manufacturing that are deployed internationally</li>
-<li>Utilizing common software development tools such as docker, Riemann, rabbitmq, the elastic stack, git, and VMWare Esxi</li>
+<li>Utilizing common software development tools such as docker, git, and VMWare Esxi</li>
 </ul>
 
 <p><strong>Informatics Team Leader</strong>  from August 2017 - Current <br />
