--- a/about/index.html
+++ b/about/index.html
@@ -145,13 +145,13 @@ Barrett Honors College at Arizona State University, Tempe, Arizona</p>
 <h4 id="technical-skills">Technical Skills</h4>
 
 <ul>
-<li><strong>Administrator level experience with</strong> Linux: Debian, Ubuntu (including LTS) Arch, Kali, Buscador, Black Box, Parrot Security, Windows: Home, Professional, and Server, and Mac OS: Personal</li>
+<li><strong>Administrator level experience with</strong> Linux: Debian, Ubuntu (including LTS), Arch, Kali, Buscador, Black Box, Parrot Security, Windows: Home, Professional, and Server, and Mac OS: Personal</li>
 <li><strong>Proficient coding ability in</strong> Python [2.7, 3.5, 3.6], C/C++, Java, JavaScript (JS), Structured Query Language (SQL)[MySQL, Sqlite, postgresql], HTML, CSS, PHP, R, Bash, Windows PowerShell, Assembly (x86), Clingo, Cplus2ASP, Wolfram Mathematica, and Matlab</li>
 <li><strong>Experience with common data science tools</strong> including Pandas, Numpy, Matlab, Mathematica, and Orange</li>
 <li><strong>Experience with common security tools</strong> including Nmap, Burp, Nessus, Maltego, Wireshark, Ettercap, Hashcat, Gnome Privacy Guard (GPG). OpenSSL, OpenVPN, and Tor</li>
 <li><strong>Experience with databases</strong> both SQL-based and non-SQL-based such as MongoDB</li>
 <li><strong>Code base management experience with</strong> GitLab, Github, and the software development lifecycle</li>
-<li><strong>Hardware familiarity with</strong> Desktops, Laptops, Servers, Raspberry Pi, Routers and Modems (Office and Home networking)</li>
+<li><strong>Hardware familiarity with</strong> Desktops, Laptops, Servers, Raspberry Pi, Routers, and Modems (Office and Home networking)</li>
 </ul>
 
   </article>
