--- a/projects/pages/index.html
+++ b/projects/pages/index.html
@@ -81,7 +81,7 @@ I consistently update this site with new content, both posts and projects. Below
 <ul>
 <li><a href="https://github.com/cnegrich/PagesSite">Github Source Respository</a></li>
 <li><a href="https://github.com/cnegrich/cnegrich.github.io">Github Hosting Repository</a></li>
-<li><a href="/posts/Hugo">Post</a></li>
+<li><a href="/posts/hugo">Post</a></li>
 </ul>
 
   </article>
