Updated resume and homepage

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <header class="major">
                 <h2>About Me</h2>
             </header>
-            <p>I currently work as a Sr. Software Engineer for Deca Technologies researching and developing technologies that assist in manufacturing. Additionally, I lead research team at Arizona State University conducting bioinformatics and microbiome research.</p>
+            <p>I currently work as a Sr. Software Engineer for Deca Technologies researching and developing technologies that assist in manufacturing.</p>
             <ul class="actions">
                 <li><a href="/posts/resume" class="button next">Full Resume</a></li>
             </ul>
